--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,21 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 2em;
+  color: #888;
+  font-family: Cambria, Georgia;
 }
 
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+}
+
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
 }
