--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,14 +1,15 @@
 <h2>Cities</h2>
 <ul class="cities">
-  <li *ngFor="let city of cities"
+  <li
+    *ngFor="let city of cities"
     [class.selected]="city === selectedCity"
     (click)="onSelect(city)"
   >
     <span>{{city.name}}</span>
 
-    <div *ngIf="city === selectedCity">
-      <h2>{{ city.name | uppercase }} Details</h2>
-      <div><span>id: </span>{{city.id}}</div>
-    </div>
+    <app-city-detail
+      *ngIf="city === selectedCity"
+      [city]="selectedCity"
+    ></app-city-detail>
   </li>
 </ul>
