--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,21 +1,39 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-body {
-  margin: 2em;
-  color: #888;
-  font-family: Cambria, Georgia;
+.app__header {
+  padding: 24px;
+  background-color: #3f51b5;
+  color: #fff;
 }
 
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+.app__header h1 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 300;
 }
 
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
+.app__main {
+  flex-grow: 1;
+  padding: 24px;
+}
+
+.app__footer {
+  padding: 24px;
+  font-size: 12px;
+  text-align: center;
+  background-color: #3f51b5;
+  color: #fff;
+}
+
+.app__footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.app__footer a:hover {
+  text-decoration: underline;
 }
