--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<h1>{{ title }}</h1>
-<router-outlet></router-outlet>
+<div class="app">
+  <header class="app__header">
+    <h1>{{ title }}</h1>
+  </header>
+
+  <main class="app__main">
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer class="app__footer">
+    <div>
+      Icons made by <a href="https://www.flaticon.com/authors/epiccoders" title="EpicCoders">EpicCoders</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+    </div>
+  </footer>
+</div>
